Rename to wp-post-type-person

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
-    "name": "xemlock/wp-people-manager",
+    "name": "xemlock/wp-post-type-person",
+    "description": "Person post type for WordPress",
     "license": "MIT",
     "authors": [
         {
